--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,9 @@ main {
   align-items: center;
   flex-direction: column;
   color: rgb(18, 18, 18);
-  background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg");
+  /* background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg"); */
+  /* background-color: rgb(51, 48, 48); */
+
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -35,7 +37,6 @@ header {
   top: 0;
   color: white;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   z-index: 10;
   backdrop-filter: blur(5px);
@@ -84,13 +85,14 @@ footer {
   justify-content: start;
   align-items: center;
   flex-direction: column;
-  /* border: 2px solid red; */
 }
 
 .home-bg {
   width: 100%;
   height: 100%;
-  background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg");
+  /* background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg"); */
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg");
+
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -170,7 +172,6 @@ footer {
   gap: 20px;
   overflow-x: scroll;
   background-color: rgb(51, 48, 48);
-  /* background-image: url('https://c4.wallpaperflare.com/wallpaper/883/1014/427/hexagon-colorful-pattern-gradient-wallpaper-preview.jpg'); */
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -212,6 +213,7 @@ footer {
   display: flex;
   margin: 20px;
   padding: 20px;
+  margin-top: 80px;
   border-radius: 12px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
@@ -271,7 +273,6 @@ li::before {
   color: #555;
 }
 
-/* Responsive Styling */
 @media (max-width: 768px) {
   .card {
       flex-direction: column;
