--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body,
@@ -10,9 +11,11 @@ html {
   height: 100%;
   font-family: 'Times New Roman', Times, serif;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
   display: none;
 }
+
 #root,
 main {
   width: 100%;
@@ -23,11 +26,11 @@ main {
   flex-direction: column;
   color: rgb(18, 18, 18);
   /* background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg"); */
-  /* background-color: rgb(51, 48, 48); */
+  background-color: rgb(51, 48, 48);
 
-  background-position: right;
+  /* background-position: right;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 header {
@@ -40,7 +43,9 @@ header {
   align-items: center;
   z-index: 10;
   backdrop-filter: blur(5px);
-  border-bottom: 1px solid rgb(88, 87, 87);
+  background-color: #343333;
+  border-bottom: 1px solid #585757;
+
 }
 
 .logo {
@@ -65,8 +70,8 @@ header {
 
 footer {
   width: 100%;
-  height: 50px;
-  position: absolute;
+  height: 40px;
+  position: fixed;
   bottom: 0;
   color: white;
   display: flex;
@@ -74,6 +79,8 @@ footer {
   backdrop-filter: blur(2px);
   align-items: center;
   z-index: 10;
+  background-color: #343333;
+  border: 2px solid red;
 }
 
 .homepage {
@@ -91,8 +98,8 @@ footer {
   width: 100%;
   height: 100%;
   /* background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg"); */
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg");
-
+  /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg"); */
+  color: white;
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
@@ -113,10 +120,12 @@ footer {
 
 .intro-section h2 {
   font-size: 3rem;
+  color: white;
 }
 
 .intro-section p {
   font-size: 1.5rem;
+  color: white;
 }
 
 
@@ -157,6 +166,9 @@ footer {
 .popular-section {
   font-size: large;
   margin-top: 50px;
+}
+
+.popular-section h3 {
   color: white;
 }
 
@@ -186,7 +198,8 @@ footer {
   border-radius: 10px;
   border: 1px solid white;
 }
-.movie-card .title{
+
+.movie-card .title {
   width: 100%;
   height: 95px;
   display: flex;
@@ -195,35 +208,58 @@ footer {
   align-items: center;
   padding: 10px;
 }
-.movie-card img{
+
+.movie-card img {
   width: 100%;
   height: 250px;
 }
-.title h1{
+
+.title h1 {
   color: white;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 0.8em;
 }
-.title p{
+
+.title p {
   color: white;
 }
 
 
 .card {
+  width: 100%;
+  height: 100%;
   display: flex;
-  margin: 20px;
-  padding: 20px;
+  justify-content: center;
+  align-items: center;
   margin-top: 80px;
-  border-radius: 12px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
+  background-size: cover;
+  background-position: center;
+  
 }
 
+.card .container {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 10px 20px rgba(23, 23, 23, 0.625);
+  background-color: rgba(0, 0, 0, 0.415);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(50px);
+  padding-bottom: 80px;
+  overflow: scroll;
+  
+}
+
+
+
 .moviePoster {
+  width: 300px;
   margin-right: 20px;
   overflow: hidden;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 .moviePoster img {
@@ -239,20 +275,26 @@ footer {
 
 .movieInfo {
   max-width: 600px;
+  height: fit-content;
+  padding: 20px;
+  background-color: #3433336b;
+  border-radius: 10px;
+
+
 }
 
 h2 {
-  color: #333;
+  color: #e1dbdb;
   margin-bottom: 8px;
 }
 
 h3 {
-  color: #555;
+  color: #aaa5a5;
   margin-bottom: 6px;
 }
 
 p {
-  color: #777;
+  color: #aea6a6;
   line-height: 1.6;
 }
 
@@ -265,6 +307,7 @@ li {
   margin-bottom: 4px;
   display: flex;
   align-items: center;
+  color: rgb(195, 193, 193);
 }
 
 li::before {
@@ -275,12 +318,12 @@ li::before {
 
 @media (max-width: 768px) {
   .card {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .moviePoster {
-      margin-right: 0;
-      margin-bottom: 20px;
+    margin-right: 0;
+    margin-bottom: 20px;
   }
 }
