--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,30 @@
-* {
+*{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
-body,
-html {
+html,body{
   width: 100%;
   height: 100%;
   font-family: 'Times New Roman', Times, serif;
+  /* background-color: red; */
 }
+
 
 ::-webkit-scrollbar {
   display: none;
 }
 
-#root,
-main {
+#root{  
+  width: 100%;
+  height: 100%;
+  padding: 80px 0 40px 0;
+
+}
+
+main{
   width: 100%;
   height: 100%;
   display: flex;
@@ -27,7 +34,6 @@ main {
   color: rgb(18, 18, 18);
   /* background-image: url("https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg"); */
   background-color: rgb(51, 48, 48);
-
   /* background-position: right;
   background-size: cover;
   background-repeat: no-repeat; */
@@ -36,7 +42,7 @@ main {
 header {
   width: 100%;
   height: 80px;
-  position: absolute;
+  position: fixed;
   top: 0;
   color: white;
   display: flex;
@@ -87,7 +93,7 @@ footer {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 80px 0 80px 0;
+  /* padding: 80px 0 80px 0; */
   display: flex;
   justify-content: start;
   align-items: center;
@@ -175,8 +181,9 @@ footer {
 .moviesField {
   width: 100%;
   height: 100%;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  /* padding-top: 100px; */
+  /* padding-bottom: 100px; */
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -187,6 +194,7 @@ footer {
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
+  
 }
 
 .movie-card {
@@ -196,7 +204,7 @@ footer {
   background-color: rgb(52, 84, 84);
   text-align: center;
   border-radius: 10px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
 
 .movie-card .title {
@@ -225,25 +233,18 @@ footer {
 }
 
 
-.card {
+
+
+.cardBg{
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 80px;
-  padding-bottom: 40px;
   background-size: cover;
   background-position: center;
-  overflow: scroll;
-
 }
 
-
-
-.card .container {
+.card  {
   width: 100%;
-  height: 100%;
+  height:fit-content;
   background-color: rgba(0, 0, 0, 0.415);
   display: flex;
   justify-content: center;
@@ -251,8 +252,9 @@ footer {
   flex-direction: column;
   backdrop-filter: blur(50px);
   /* padding-top: 80px; */
-  /* padding-bottom: 10px; */
+  /* padding-bottom: 40px; */
   overflow: scroll;
+  /* background-color: red; */
   border: 2px solid red;
 }
 
@@ -262,6 +264,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .moviePoster {
@@ -285,7 +288,7 @@ footer {
 
 .movieInfo {
   width: 600px;
-  height: 90%;
+  height: 80%;
   padding: 20px;
   background-color: #3433336b;
   border-radius: 10px;
@@ -298,12 +301,20 @@ footer {
 
 .seasonBtn h3 {
   color: #aaa5a5;
-  margin-bottom: 6px;
+  /* margin-bottom: 6px; */
 }
 
 .movieInfo p {
   color: #aea6a6;
   line-height: 1.6;
+}
+
+.seasonBtn{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 
@@ -324,11 +335,15 @@ footer {
   height: 100%;
   color: white;
   backdrop-filter: blur(200px);
-  /* background-color: red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
 }
-
+/* 
 @media (max-width: 768px) {
-  .card {
+  .container {
     flex-direction: column;
     align-items: center;
   }
@@ -337,4 +352,4 @@ footer {
     margin-right: 0;
     margin-bottom: 20px;
   }
-}
+} */
