--- a/src/index.css
+++ b/src/index.css
@@ -44,11 +44,21 @@ header {
   color: white;
   display: flex;
   align-items: center;
-  z-index: 10;
+  justify-content: space-between;
+  padding: 0 20px;
+  z-index: 100;
   backdrop-filter: blur(5px);
   background-color: #343333;
   border-bottom: 1px solid #585757;
 
+}
+
+header i {
+  display: none;
+}
+
+header nav {
+  z-index: 10;
 }
 
 .logo {
@@ -100,9 +110,10 @@ footer {
 
 .home-bg {
   width: 100%;
-  height: 100%;  color: white;
+  height: 100%;
+  color: white;
   background-image: url('assets/CineScoreBg.jpg');
-  background-position: right;
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -10;
@@ -114,7 +125,7 @@ footer {
 
 
 .intro-section {
-  width: 800px;
+  width: 80%;
   color: white;
   text-align: center;
   margin-top: 80px;
@@ -132,7 +143,33 @@ footer {
   color: white;
 }
 
+.popularpicks {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
 
+.PopularP {
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-shadow: 3px 3px 3px rgb(45, 37, 37);
+  margin: 10px;
+}
+
+.popularpicks button {
+  font-size: large;
+  padding: 5px;
+  color: red;
+  background-color: #e1dbdb97;
+  border-radius: 10%;
+  border: none;
+  outline: none;
+}
 
 .search-space {
   width: 100%;
@@ -166,8 +203,72 @@ footer {
 
 }
 
+.searchNav {
+  width: 350px;
+  display: flex;
+  justify-content: end;
+  /* border: 1px solid white; */
+}
 
+.searchNav input {
+  width: 170px;
+  height: 30px;
+  font-size: 1rem;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-radius: 10px 0 0 10px;
 
+  &:hover {
+    width: 210px;
+  }
+
+  &:focus {
+    width: 210px;
+  }
+}
+
+.searchNav button {
+  width: 40px;
+  height: 30px;
+  border: none;
+  outline: none;
+  border-radius: 0 10px 10px 0;
+}
+/*  */
+
+.phoneNav {
+  width: 350px;
+  display: flex;
+  justify-content: end;
+  /* border: 1px solid white; */
+}
+
+.phoneNav input {
+  width: 170px;
+  height: 30px;
+  font-size: 1rem;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-radius: 10px 0 0 10px;
+
+  &:hover {
+    width: 210px;
+  }
+
+  &:focus {
+    width: 210px;
+  }
+}
+
+.phoneNav button {
+  width: 40px;
+  height: 30px;
+  border: none;
+  outline: none;
+  border-radius: 0 10px 10px 0;
+}
 
 .moviesField {
   width: 100%;
@@ -218,9 +319,6 @@ footer {
     background-color: red;
   }
 
-  /* position: absolute; */
-  /* bottom: 50px; */
-  /* left: 45%; */
 }
 
 .movie-card {
@@ -263,7 +361,7 @@ footer {
 
 
 .cardBg {
-  width: 100%;  
+  width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
@@ -350,7 +448,7 @@ footer {
   padding: 10px 0;
 }
 
-.seasonBtn h3{
+.seasonBtn h3 {
   color: black;
   font-family: sans-serif;
 }
@@ -404,14 +502,15 @@ footer {
 
 }
 
-.episodeBg{
+.episodeBg {
   width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-.episode{
+
+.episode {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(100px);
@@ -425,11 +524,13 @@ footer {
   padding: 20px 0;
   overflow: scroll;
 }
-.episode h1{
+
+.episode h1 {
   text-shadow: 3px 3px 3px black;
   margin: 5px 0;
 }
-.episodeData{
+
+.episodeData {
   width: 100%;
   height: 100%;
   display: flex;
@@ -437,7 +538,8 @@ footer {
   justify-content: center;
   gap: 10px;
 }
-.episodeInfo{
+
+.episodeInfo {
   width: 700px;
   height: fit-content;
   background-color: #34333353;
@@ -446,24 +548,54 @@ footer {
   padding: 0 20px;
   /* border: 2px solid white; */
 }
-.episodeInfo p{
+
+.episodeInfo p {
   margin: 5px 0;
   font-size: 1.2rem;
 }
-.episode img{
+
+.episode img {
   width: 350px;
   border-radius: 5px;
 }
 
-/* 
+
 @media (max-width: 768px) {
-  .container {
-    flex-direction: column;
+  .searchNav{
+    display: none;
+  }
+
+  .phoneNav {
+    width: 100%;
+    height: fit-content;
+    position: absolute;
+    z-index: 10;
+    top: 80px;
+    right: 0;
+    padding: 20px;
+    background-color: rgba(49, 48, 58, 0.592);
+    display: flex;
+    justify-content: center;
     align-items: center;
+    animation: phone 0.5s ease-in forwards;
+  }
+  @keyframes phone {
+    from{
+      top:  50px;
+      opacity: 0;
+    }
+    to{
+      top: 80px;
+      opacity: 1;
+    }
+    
+  }
+  header i {
+    display: block;
   }
 
   .moviePoster {
     margin-right: 0;
     margin-bottom: 20px;
   }
-} */
+}
