--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,9 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   /* background-color: red; */
 }
-
 
 ::-webkit-scrollbar {
   display: none;
@@ -23,7 +22,6 @@ body {
   width: 100%;
   height: 100%;
   padding: 80px 0 40px 0;
-
 }
 
 main {
@@ -50,7 +48,6 @@ header {
   backdrop-filter: blur(5px);
   background-color: #343333;
   border-bottom: 1px solid #585757;
-
 }
 
 header i {
@@ -78,7 +75,8 @@ header nav {
 
 .logo h1 {
   font-size: 3rem;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   color: rgb(162, 166, 169);
 }
 
@@ -111,7 +109,7 @@ footer {
   width: 100%;
   height: 100%;
   color: white;
-  background-image: url('assets/CineScoreBg.jpg');
+  background-image: url("assets/CineScoreBg.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -121,7 +119,6 @@ footer {
   top: 0;
   right: 0;
 }
-
 
 .intro-section {
   width: 80%;
@@ -199,7 +196,6 @@ footer {
   border-bottom-right-radius: 10px;
   color: rgb(145, 25, 25);
   filter: brightness(0.8);
-
 }
 
 .searchNav {
@@ -283,7 +279,6 @@ footer {
   background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
-
 }
 
 .fieldPageBtn {
@@ -296,7 +291,6 @@ footer {
   align-items: center;
   background-color: rgb(51, 48, 48);
   color: white;
-
 }
 
 .pageBtns {
@@ -317,7 +311,6 @@ footer {
   &:active {
     background-color: red;
   }
-
 }
 
 .movie-card {
@@ -348,16 +341,14 @@ footer {
 
 .title h1 {
   color: white;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 0.8em;
 }
 
 .title p {
   color: white;
 }
-
-
-
 
 .cardBg {
   width: 100%;
@@ -392,7 +383,6 @@ footer {
   margin-right: 20px;
   overflow: hidden;
   border-radius: 12px;
-
 }
 
 .moviePoster img {
@@ -417,9 +407,7 @@ footer {
   overflow: scroll;
   font-size: large;
   /* margin-top: 120px; */
-
 }
-
 
 .seasonBtn h3 {
   color: white;
@@ -448,7 +436,6 @@ footer {
   color: black;
   font-family: sans-serif;
 }
-
 
 .seasonBtn button {
   margin-left: 10px;
@@ -495,7 +482,6 @@ footer {
   line-height: 2;
   cursor: pointer;
   font-family: sans-serif;
-
 }
 
 .episodeBg {
@@ -512,24 +498,33 @@ footer {
   backdrop-filter: blur(100px);
   color: white;
   font-family: sans-serif;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding: 20px 0;
   overflow: scroll;
 }
 
-.episode h1 {
+.episodeInfo h1 {
   text-shadow: 3px 3px 3px black;
+  text-align: center;
   margin: 5px 0;
 }
 
 .episodeData {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   display: flex;
   justify-content: center;
+  font-size: 0.7rem;
   gap: 10px;
 }
 
+.episode img {
+  width: 350px;
+  border-radius: 5px;
+}
 .episodeInfo {
   width: 700px;
   height: fit-content;
@@ -545,48 +540,41 @@ footer {
   font-size: 1.2rem;
 }
 
-.episode img {
-  width: 350px;
-  border-radius: 5px;
-}
-
-
 @media (max-width: 768px) {
-  .searchNav{
+  .searchNav {
     display: none;
   }
 
-  .logo img{
+  .logo img {
     width: 40px;
     height: 40px;
   }
-  .logo h1{
+  .logo h1 {
     font-size: 2rem;
   }
-  .intro-section{
+  .intro-section {
     width: 98%;
   }
-  .intro-section h2{
+  .intro-section h2 {
     font-size: 1.5rem;
   }
-  .intro-section p{
+  .intro-section p {
     font-size: 1rem;
   }
 
-
-  .PopularP{
+  .PopularP {
     font-size: 1.5rem;
   }
-  .popularpicks button{
+  .popularpicks button {
     font-size: 0.8rem;
   }
 
-  .search-space input[type="search"]{
+  .search-space input[type="search"] {
     width: 150px;
     height: 40px;
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
-  .search-space button{
+  .search-space button {
     width: 50px;
     height: 40px;
   }
@@ -605,23 +593,21 @@ footer {
     animation: phone 0.5s ease-in forwards;
   }
 
-
   @keyframes phone {
-    from{
-      top:  50px;
+    from {
+      top: 50px;
       opacity: 0;
     }
-    to{
+    to {
       top: 80px;
       opacity: 1;
     }
-    
   }
   header i {
     display: block;
   }
 
-  .movieCard{
+  .movieCard {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -629,19 +615,40 @@ footer {
   }
 
   .moviePoster {
-    width: 200px;
+    width: 80%;
     margin-right: 0;
   }
-  .movieInfo{
-    width: 95%;
+  .movieInfo {
+    width: 99%;
     margin-top: 0;
     font-size: small;
   }
 
-  .episode{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  .episodeData {
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    overflow: scroll;
+  }
+  .episode img {
+    width: 80%;
+  }
+  .episodeInfo {
+    width: 100%;
+    height: fit-content;
+  }
+
+  .movie-card{
+    width: 45%;
+    height: fit-content;
+  }
+  .movie-card img{
+    width: 100%;
+    height: 150px;
+  }
+  .movie-card .title{
+    height: 65px;
+    font-size: .8rem;
   }
 }
