--- a/src/index.css
+++ b/src/index.css
@@ -269,16 +269,24 @@ footer {
   width: 100%;
   height: 100%;
   padding: 10px;
+  background-color: rgb(51, 48, 48);
+}
+.showingRes{
+  text-align: center;
+  padding: 10px;
+  color: rgb(199, 182, 182);
+}
+
+.movieResults{
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
   overflow-x: scroll;
-  background-color: rgb(51, 48, 48);
-  background-position: right;
-  background-size: cover;
-  background-repeat: no-repeat;
+  
 }
 
 .fieldPageBtn {
