--- a/src/index.css
+++ b/src/index.css
@@ -268,8 +268,14 @@ footer {
 .moviesField {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  /* border: 2px solid red; */
   padding: 10px;
   background-color: rgb(51, 48, 48);
+  overflow-y: scroll;
 }
 .showingRes{
   text-align: center;
@@ -282,10 +288,10 @@ footer {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   flex-wrap: wrap;
   gap: 20px;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   
 }
 
@@ -295,6 +301,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 10px 0;
   gap: 10px;
   align-items: center;
   background-color: rgb(51, 48, 48);
