--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Times New Roman", Times, serif;
-  /* background-color: red; */
 }
 
 ::-webkit-scrollbar {
@@ -202,7 +201,6 @@ footer {
   width: 350px;
   display: flex;
   justify-content: end;
-  /* border: 1px solid white; */
 }
 
 .searchNav input {
@@ -230,13 +228,11 @@ footer {
   outline: none;
   border-radius: 0 10px 10px 0;
 }
-/*  */
 
 .phoneNav {
   width: 350px;
   display: flex;
   justify-content: end;
-  /* border: 1px solid white; */
 }
 
 .phoneNav input {
@@ -280,6 +276,7 @@ footer {
   text-align: center;
   padding: 10px;
   color: rgb(199, 182, 182);
+  font-size: small;
 }
 
 .movieResults {
@@ -290,7 +287,6 @@ footer {
   align-items: start;
   flex-wrap: wrap;
   gap: 20px;
-  /* overflow-x: scroll; */
 }
 
 .fieldPageBtn {
@@ -334,7 +330,6 @@ footer {
   text-align: center;
   border-radius: 10px;
   cursor: pointer;
-  /* border: 1px solid white; */
 }
 
 .movie-card .title {
@@ -419,7 +414,6 @@ footer {
   color: white;
   overflow: scroll;
   font-size: large;
-  /* margin-top: 120px; */
 }
 
 .seasonBtn h3 {
@@ -441,7 +435,8 @@ footer {
   align-items: center;
   text-align: center;
   flex-direction: column;
-  border: 1px solid white;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
   padding: 10px 0;
 }
 
@@ -483,12 +478,9 @@ footer {
 .EpisodesList {
   width: fit-content;
   height: 100%;
-  /* padding: 20px; */
   display: flex;
   justify-content: center;
-  /* align-items: center; */
   flex-direction: column;
-  /* border: 1px solid green; */
 }
 
 .EpisodesList h3 {
@@ -515,7 +507,6 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 20px 0;
   overflow: scroll;
 }
 
@@ -545,15 +536,46 @@ footer {
   border-radius: 5px;
   text-align: start;
   padding: 0 20px;
-  /* border: 2px solid white; */
 }
+
 
 .episodeInfo p {
   margin: 5px 0;
   font-size: 1.2rem;
 }
 
+.NotFound{
+  width: 80vw;
+  height: 400px;
+  /* background-color: #3a0c0c; */
+  /* border: 2px solid white; */
+}
+.NotFound h1{
+  animation: notFound 5s infinite;
+}
+@keyframes notFound {
+  0%{
+    transform: translateY(120px);
+
+  }
+ 
+  50%{
+    transform: translateY(180px);
+
+  }
+  
+  100%{
+    transform: translateY(120px);
+
+  }
+  
+  
+}
+
 @media (max-width: 768px) {
+  header{
+    padding: 2px;
+  }
   .searchNav {
     display: none;
   }
