--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Times New Roman", Times, serif;
+  background-color: #34333353;
+
 }
 
 ::-webkit-scrollbar {
@@ -351,11 +353,12 @@ footer {
   color: white;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 
 .title p {
   color: white;
+  font-size: 0.8em;
 }
 
 .cardBg {
