--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,7 @@ footer {
   border-radius: 10%;
   border: none;
   outline: none;
+  cursor: pointer;
 }
 
 .search-space {
@@ -197,6 +198,7 @@ footer {
   border-bottom-right-radius: 10px;
   color: rgb(145, 25, 25);
   filter: brightness(0.8);
+  cursor: pointer;
 }
 
 .searchNav {
@@ -229,6 +231,7 @@ footer {
   border: none;
   outline: none;
   border-radius: 0 10px 10px 0;
+  cursor: pointer;
 }
 
 .phoneNav {
@@ -301,6 +304,7 @@ footer {
   gap: 10px;
   align-items: center;
   background-color: rgb(51, 48, 48);
+  cursor: pointer;
   color: white;
 }
 
@@ -309,6 +313,7 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 20px;
+  cursor: pointer;
 }
 
 .pageBtns input {
@@ -422,6 +427,7 @@ footer {
 .seasonBtn h3 {
   color: white;
   margin: 5px 0;
+  cursor: pointer;
 }
 
 .movieInfo p {
@@ -457,6 +463,7 @@ footer {
   border: none;
   outline: none;
   background-color: #343333;
+  cursor: pointer;
   color: #e1dbdb;
 }
 
