--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ header nav {
     "Lucida Sans", Arial, sans-serif;
   color: rgb(162, 166, 169);
 }
-
+/* 
 footer {
   width: 100%;
   height: 40px;
@@ -93,6 +93,54 @@ footer {
   align-items: center;
   z-index: 10;
   background-color: #343333;
+} */
+footer {
+	width: 100%;
+	height: 70px;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	bottom: 0;
+  background-color: #343333;
+
+}
+
+.contact {
+	width: 100%;
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.icon {
+	display: flex;
+}
+
+.icon img {
+	height: 20px;
+	margin: 0 5px;
+}
+
+.icon img:hover {
+	transform: scale(1.3);
+}
+
+/* Set styles for copyright information */
+.copyright {
+	text-align: center;
+}
+
+.copyright a {
+	color: rgb(18, 17, 17);
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.copyright a:hover {
+	color: orange;
 }
 
 .homepage {
